# octopus

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  start-octopus.cmd
.github/workflows/: ci.yml  windows-package.yml
benchmarks/: README.md  __init__.py  benchmark_estimates.py  benchmark_incremental.py  benchmark_retrieval.py  benchmark_transactions.py  generate_dataset.py  generate_retrieval_dataset.py  performance_gate.py
benchmarks/baselines/: v0.7-release-gates.json
benchmarks/datasets/: search-value-v1.json
docs/adr/: 0001-mvp-architecture.md  0002-recoverable-index-transactions.md  0003-grounded-search-and-parser-evidence.md  0004-explainable-retrieval-and-derived-cache.md
docs/api/: LOCAL_API_V1.md  LOCAL_API_V2.md
docs/plugins/: PLUGIN_SDK_V1.md
docs/product/: COMPATIBILITY_MATRIX.md  CONTRACT_FREEZE_V1.md  METRICS.md  OCTOPUS_FRONTEND_UI_UX_DRAFT.md  OCTOPUS_PRODUCT_DESIGN_PROPOSAL.md  Octopus产品版本迭代总规范.md  PERFORMANCE_BASELINE.md  ROADMAP.md  SEARCH_EVALUATION_BASELINE.md  VERSIONING_AND_COMPATIBILITY.md  contract-freeze-v1.json
docs/releases/: TEMPLATE.md  v0.1.md  v0.2.md  v0.3.md  v0.4-acceptance-protocol.md  v0.4.md  v0.5-user-study-protocol.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v0.9-known-issues.json  v0.9.md  v1.0-engineering-report.md  v1.0-known-issues.json  v1.0.md  v1.1-known-issues.json  v1.1.md  v2.0-known-issues.json  v2.1.0.dev1.md
docs/specs/: README.md
docs/support/: EMERGENCY_ROLLBACK.md  SUPPORT_POLICY.md
docs/user/: DIAGNOSTICS_AND_RECOVERY.md  TROUBLESHOOTING.md  USER_GUIDE.md  WINDOWS_INSTALLATION.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: core.spec.ts
frontend/src/: App.tsx  activity.ts  api.ts  bridge.ts  core.test.ts  jobs.ts  main.tsx  mockApi.ts  researchWorkbench.test.tsx  resilience.test.tsx  store.ts  styles.css  taskPackActions.ts  taskPersistence.ts  types.ts  utils.ts  workspaceUi.test.tsx  workspaceUi.ts
packaging/: README.md  build_windows.ps1  entry_cli.py  entry_gui.py  install_inno_language.ps1  installer.iss  octopus.cmd  octopus.spec  validate_windows_install.ps1  write_artifact_manifest.py  write_version_info.py
plugins/package/: plugin.json  plugin.py
plugins/timeline/: plugin.json  plugin.py
scripts/: start-octopus.ps1
src/octopus/: __init__.py  activation.py  api.py  cancellation.py  citations.py  cli.py  compatibility.py  (+48 more)
tests/: conftest.py  test_api.py  test_benchmarks.py  test_beta_hardening.py  test_citations.py  test_cli.py  test_compatibility.py  test_config_and_filesystem.py  test_credentials.py  test_desktop.py  test_diagnostics.py  test_documentation_and_versioning.py  test_engine_e2e.py  test_evaluation.py  test_export_artifacts.py  test_locking.py  test_migrations.py  test_onboarding.py  test_packaging_smoke.py  test_parsers.py  test_plugins.py  test_providers.py  test_release_audit.py  test_rendering.py  test_research_ai.py  test_research_export.py  test_scanner.py  test_search.py  test_search_evaluation.py  test_service_runtime.py  test_task_packs.py  test_transactions.py  test_upgrade.py  test_vision.py  test_workspace_api_v2.py  test_workspace_api_v21.py  test_workspace_changes.py  test_workspace_search_filters.py  test_workspace_sources.py  test_workspace_tasks_v2.py  (+2 more)
(+32 files in other folders)
