[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "octopus-index"
dynamic = ["version"]
description = "Local-first, link-centric file indexing CLI"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "tty627" }]
dependencies = [
  "typer>=0.15,<1",
  "pydantic>=2.10,<3",
  "openai>=1.60,<3",
  "pypdf>=6,<7",
  "pypdfium2>=5,<6",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "python-pptx>=1.0,<2",
  "Pillow>=11,<13",
  "rapidocr>=3.0,<4",
  "onnxruntime>=1.20,<2",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "pywin32>=310,<312; sys_platform == 'win32'",
  "packaging>=24,<27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "httpx2>=2,<3",
  "types-pywin32>=311,<312",
]
build = [
  "build>=1.2,<2",
  "pyinstaller==6.21.0",
]

[project.scripts]
octopus = "octopus.cli:app"

[project.gui-scripts]
octopus-gui = "octopus.gui:main"

[tool.hatch.version]
path = "src/octopus/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/octopus"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["octopus"]
omit = [
  "*/octopus/__main__.py",
  "*/octopus/cli.py",
  "*/octopus/gui.py",
  "*/octopus/markmap.py",
  "*/octopus/parsers.py",
  "*/octopus/service_control.py",
  "*/octopus/watcher.py",
  "*/octopus/windows_service.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["octopus"]

[[tool.mypy.overrides]]
module = ["rapidocr"]
ignore_missing_imports = true
